Change Java target from 21 to 17